--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Panterday/Panterday-CRUD-React-Material-UI",
+  "homepage": "https://panterday.github.io/Panterday-CRUD-React-Material-UI",
   "name": "crud",
   "version": "0.1.0",
   "private": true,
